k8s/base/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nabis-production
---
apiVersion: v1
kind: Namespace
metadata:
  name: nabis-staging
